--- a/build.gradle
+++ b/build.gradle
@@ -21,4 +21,6 @@ dependencies {
     compile group: 'javax.servlet', name: 'jstl', version: '1.2'
 
     compile group: 'com.owlike', name: 'genson', version: '1.3'
+    compile 'com.oracle.ozark.ext:ozark-thymeleaf:1.0.0-m01'
+
 }
